--- a/gamedesign.html
+++ b/gamedesign.html
@@ -11,8 +11,39 @@
  <body>
   <div id="main">
     <p class="pbig secret" ><a href="index.html">ALEXANDER GOODWIN</a></p>
+	
 	<p>_________________________________________________________</p>
-    <p >0 1 0 0 0 0 0 1  </p>
+	<p>Making games for 4 years. Knowing full development pipeline. In every one of my projects I make everything by self - programming, modelling, texturing, level/game/audio design. Below you can find all projects that I own.</p>
+	
+	<p>_________________________________________________________</p>
+    <p >0 0 0 0 0 0 0 0  </p>
+	 <p class="secret">M E C H A N I S M</p>
+	 <img class="image" src="Images/Mechanism/5.jpg">
+	   <p class="disc">- adventure / horror / puzzle / depressive game from solo independent developer Alexander Goodwin. </p>
+      <p class="secret"> <a href="https://alexgoodwindev.github.io/Mechanism/"> MECHANISM page	 </a> </p>
+	  <p>_________________________________________________________</p>
+		  <a  class ="img" href="Images/Mechanism/2.png" target="_blank">
+           <img class="preview" src="Images/Mechanism/2.png">
+          </a>
+		    <a class ="img" href="Images/Mechanism/3.png" target="_blank">
+           <img class="preview" src="Images/Mechanism/3.png">
+          </a>
+		    <a class ="img" href="Images/Mechanism/4.png" target="_blank">
+           <img class="preview" src="Images/Mechanism/4.png">
+          </a>
+		   <a class ="img" href="Images/Mechanism/1.jpg" target="_blank">
+           <img class="preview" src="Images/Mechanism/1.jpg">
+          </a>
+		   
+		  <p>_________________________________________________________</p>
+		 <p class="disc"> Game was already greenlit on Steam. Target Platform is Windows, Linux, Mac. No plans for smartphones yet. Current Release date is the end of February 2017.</p>
+  <p class="secret"><a href="http://store.steampowered.com/app/645290/M_E_C_H_A_N_I_S_M/">STEAM</a></p>		
+		<p class="secret"><a href="https://www.facebook.com/AlgoticaGame/">Facebook page </a></p>
+		  <p class="secret"><a href="https://vk.com/m_e_c_h_a_n_i_s_m">VK page </a></p>		   
+		   <p class="secret"><a href="https://twitter.com/AlexGoodwin63">Twitter </a></p>
+	
+	<p>_________________________________________________________</p>
+    <p >0 0 0 0 0 0 0 1  </p>
 	 <p class="secret">ALGOTICA : ITERATION I</p>
 	 <img class="image" src="Images/Algotica/1.jpg">
 	   <p class="disc">Algotica is an educational adventure-puzzle game about programming, along with a story that breaks the fourth wall. I am the only developer, only artist, only 3D modeler and even the composer of several tracks in this project.</p>
@@ -37,12 +68,11 @@
           </a>
 		  <p>_________________________________________________________</p>
 		 <p class="disc"> Game was already greenlit on Steam. Target Platform is Windows, Linux, Mac. No plans for smartphones yet. Current Release date is the end of February 2017.</p>
-		 <p class="secret"><a href="https://www.facebook.com/AlgoticaGame/">Facebook page </a></p>
-		  <p class="secret"><a href="https://vk.com/algotica">VK page </a></p>
+		  <p class="secret"><a href="http://store.steampowered.com/app/593330/Algotica__Iteration_1/">STEAM</a></p>
 		    <p class="secret"><a href="http://www.indiedb.com/games/algotica">IndieDB page </a></p>
-		   <p class="secret"><a href="https://twitter.com/AlexGoodwin63">Twitter </a></p>
+		 
 		   <p>_________________________________________________________</p>
-	  <p>0 1 0 1 0 0 1 1</p>
+	  <p>0 0 0 0 0 0 1 0</p>
 	   <p class="secret">SPACE OVERDRIVE</p>
 	   <img class="imageS" src="Images/Space Overdrive/1.jpg">
 	    <p class="disc">Space Overdrive is a modified clone of Space Invaders, pixel art graphics and retro-wave style were used in it. It's absolutely free, no ads or in-game purchases. Again, all art, programming and music completely mine.</p>
