--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
  
   <div id="main">
     <p class="pbig">ALEXANDER GOODWIN</p>
-    <p >0 1 0 1 0 0 0 0  </p>
-	 <p class="secret">P R O G R A M M E R</p>
+   
+	
 	   <p >0 1 0 0 0 1 1 1</p>
 	     <p >0 1 0 0 0 1 0 0</p>
-	  <p class="secret" ><a href="gamedesign.html">G A M E ___ D E S I G N E R</a></p>
+	  <p class="secret" ><a href="gamedesign.html">G A M E ___ D E V E L O P E R</a></p>
 	  <p>0 1 0 0 0 0 0 1</p>
 	   <p class="secret">A R T I S T</p>
 	   <p>0 1 0 0 1 1 0 1</p>
