--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	   <p>0 1 0 0 0 0 1 1</p>
 	 <p class="secret">M U S I C ___ C O M P O S E R</p>
 	  <p>0 1 1 0 0 1 0 0</p> 
-	  <p class="secret"><a href="alexgoodwin63@gmail.com">C O N T A C T</a>  </p>
+	  <p class="secret">C O N T A C T: goodwinalex@alexandergoodwin.org  </p>
 	  <p>0 1 1 0 0 1 0 0</p> 
 </div>
  <div class="design elem1">
